fix spacing on about__tools-list

--- a/resources/styles/styles.css
+++ b/resources/styles/styles.css
@@ -123,6 +123,8 @@ strong {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    flex-wrap: wrap;
+    gap: 1rem;
     padding: 1rem;
 }
 
